sonarr/01-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: sonarr-service
  namespace: p2p
spec:
  selector:
    app: sonarr
  ports:
  - port: 8989
    targetPort: 8989
    name: web
    protocol: TCP
  type: ClusterIP
